Correccion de dimension tiempo, ademas de una nueva forma de cargar la tabla

--- a/DataWarehouse/3ETL/axel.ipynb
+++ b/DataWarehouse/3ETL/axel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Axel\\AppData\\Local\\Temp\\ipykernel_1104\\877552558.py:7: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\Axel\\AppData\\Local\\Temp\\ipykernel_29604\\877552558.py:7: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  tablas[tabla] = pd.read_sql(query, conn)\n"
      ]
     }
@@ -66,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Axel\\AppData\\Local\\Temp\\ipykernel_1104\\3166214258.py:29: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\Axel\\AppData\\Local\\Temp\\ipykernel_29604\\3166214258.py:29: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df_result = pd.read_sql(query, conn)\n"
      ]
     },
@@ -232,7 +232,7 @@
        "7                       2.80                 155.0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -366,20 +366,9 @@
       "6  2024   10    3    10 2024-10-03 10:00:00\n",
       "7  2024   10    4    11 2024-10-04 11:00:00\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "# Extraer las fechas únicas de la columna Fecha_inicio\n",
     "fechas_unicas = tablas['Ciclo_lavado']['fecha_inicio'].dropna().unique()\n",
     "\n",
@@ -395,7 +384,8 @@
     "print(df_tiempo)\n",
     "\n",
     "# Insertar los datos en la tabla Tiempo del datawarehouse\n",
-    "df_tiempo.to_sql('tiempo', engine, if_exists='append', index=False)"
+    "#df_tiempo.to_sql('tiempo', engine, if_exists='replace', index=False)\n",
+    "df_tiempo = actualizarTablaDimension(engine, 'tiempo', df_tiempo, pk=['anio', 'mes', 'dia', 'hora'])\n"
    ]
   },
   {
@@ -407,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -416,19 +406,30 @@
        "8"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Cargar la tabla de hechos en el datawarehouse usando el df_result\n",
+    "#FORMA 1\n",
     "df_result.to_sql('registro_lavado', engine, if_exists='append', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FORMA 2\n",
+    "datos = actualizarTablaDimension(engine, 'registro_lavado', df_result, pk= 'id_registro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -448,8 +449,8 @@
     "JOIN Ubicacion ON registro_lavado.id_ubicacion = Ubicacion.id_ubicacion\n",
     "WHERE anio = 2024 and pais = 'Argentina'\n",
     "GROUP BY Pais ; \"\"\"\n",
-    "df_result = pd.read_sql(query, engine)\n",
-    "print(df_result)\n"
+    "consulta_1 = pd.read_sql(query, engine)\n",
+    "print(consulta_1)\n"
    ]
   },
   {
