Corregimos la clave minuto

--- a/DataWarehouse/3ETL/axel.ipynb
+++ b/DataWarehouse/3ETL/axel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,14 @@
     "# Conexion con la base de datos\n",
     "conn = psycopg2.connect(\n",
     "    host=\"localhost\",\n",
-    "    database=\"Lavarropas2\",\n",
+    "    database=\"Lavarropas\",\n",
     "    user=\"postgres\",\n",
     "    password=\"1234\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -66,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Axel\\AppData\\Local\\Temp\\ipykernel_29604\\3166214258.py:29: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\Axel\\AppData\\Local\\Temp\\ipykernel_29604\\3307235792.py:30: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df_result = pd.read_sql(query, conn)\n"
      ]
     },
@@ -102,6 +102,7 @@
        "      <th>mes</th>\n",
        "      <th>dia</th>\n",
        "      <th>hora</th>\n",
+       "      <th>minuto</th>\n",
        "      <th>id_ubicacion</th>\n",
        "      <th>id_marca</th>\n",
        "      <th>numero_lavados</th>\n",
@@ -113,57 +114,10 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2024.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.20</td>\n",
-       "      <td>55.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2024.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>40.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2024.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.05</td>\n",
-       "      <td>195.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2024.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>60.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2024.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -171,11 +125,51 @@
        "      <td>180.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>155.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>55.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>2024.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -183,11 +177,12 @@
        "      <td>155.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>5</th>\n",
        "      <td>2024.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>11.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>1</td>\n",
@@ -195,44 +190,58 @@
        "      <td>265.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.05</td>\n",
+       "      <td>195.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2024.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>18.0</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.80</td>\n",
-       "      <td>155.0</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>60.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     anio   mes   dia  hora  id_ubicacion  id_marca  numero_lavados  \\\n",
-       "0  2024.0   2.0  15.0  14.0             2         2               1   \n",
-       "1  2024.0   3.0  20.0   9.0             3         3               1   \n",
-       "2  2024.0  10.0   3.0  10.0             3         3               1   \n",
-       "3  2024.0   4.0  25.0  18.0             4         4               1   \n",
-       "4  2024.0  10.0   1.0   8.0             1         1               1   \n",
-       "5  2024.0  10.0   2.0   9.0             2         2               1   \n",
-       "6  2024.0  10.0   4.0  11.0             4         4               1   \n",
-       "7  2024.0   1.0  10.0   8.0             1         1               1   \n",
+       "     anio   mes   dia  hora  minuto  id_ubicacion  id_marca  numero_lavados  \\\n",
+       "0  2024.0  10.0   1.0   8.0     0.0             1         1               1   \n",
+       "1  2024.0   1.0  10.0   8.0    30.0             1         1               1   \n",
+       "2  2024.0   3.0  20.0   9.0    20.0             3         3               1   \n",
+       "3  2024.0   2.0  15.0  14.0    45.0             2         2               1   \n",
+       "4  2024.0  10.0   2.0   9.0     0.0             2         2               1   \n",
+       "5  2024.0  10.0   4.0  11.0     0.0             4         4               1   \n",
+       "6  2024.0  10.0   3.0  10.0     0.0             3         3               1   \n",
+       "7  2024.0   4.0  25.0  18.0    10.0             4         4               1   \n",
        "\n",
        "   consumo_total_energia_kwh  consumo_total_agua_l  \n",
-       "0                       1.20                  55.5  \n",
-       "1                       0.90                  40.0  \n",
-       "2                       4.05                 195.0  \n",
-       "3                       1.50                  60.2  \n",
-       "4                       3.55                 180.0  \n",
-       "5                       2.85                 155.0  \n",
-       "6                       4.35                 265.0  \n",
-       "7                       2.80                 155.0  "
+       "0                       3.55                 180.0  \n",
+       "1                       2.80                 155.0  \n",
+       "2                       0.90                  40.0  \n",
+       "3                       1.20                  55.5  \n",
+       "4                       2.85                 155.0  \n",
+       "5                       4.35                 265.0  \n",
+       "6                       4.05                 195.0  \n",
+       "7                       1.50                  60.2  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,6 +253,7 @@
     "    EXTRACT(MONTH FROM cl.fecha_inicio) AS Mes,\n",
     "    EXTRACT(DAY FROM cl.fecha_inicio) AS Dia,\n",
     "    EXTRACT (HOUR FROM cl.fecha_inicio) AS Hora,\n",
+    "    EXTRACT (MINUTE FROM cl.fecha_inicio) AS Minuto,\n",
     "    u.ID_ubicacion,\n",
     "    m.id_marca,\n",
     "    COUNT(cl.ID_ciclo) AS Numero_lavados,\n",
@@ -262,7 +272,7 @@
     "JOIN \n",
     "    Marca m ON l.id_marca = m.id_marca\n",
     "GROUP BY \n",
-    "    Anio, Mes, Dia, Hora, u.ID_ubicacion,  m.id_marca;\n",
+    "    Anio, Mes, Dia, Hora, Minuto, u.ID_ubicacion,  m.id_marca;\n",
     "\"\"\"\n",
     "\n",
     "# Realizar la consulta y guardar el resultado en un DataFrame\n",
@@ -279,24 +289,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   id_ubicacion                  pais             provincia  \\\n",
-      "0             1  Argentina             Buenos Aires           \n",
-      "1             2  Argentina             Cordoba                \n",
-      "2             3  Argentina             Santa Fe               \n",
-      "3             4  Argentina             Mendoza                \n",
+      "   id_ubicacion                  pais                  provincia  \\\n",
+      "0             1  Argentina             Buenos Aires                \n",
+      "1             2  Argentina             Cordoba                     \n",
+      "2             3  Argentina             Santa Fe                    \n",
+      "3             4  Argentina             Mendoza                     \n",
       "\n",
-      "                 ciudad  \n",
-      "0  La Plata              \n",
-      "1  Cordoba Capital       \n",
-      "2  Rosario               \n",
-      "3  Mendoza               \n"
+      "                      ciudad  \n",
+      "0  La Plata                   \n",
+      "1  Cordoba Capital            \n",
+      "2  Rosario                    \n",
+      "3  Mendoza                    \n"
      ]
     }
    ],
@@ -318,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -349,22 +359,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   anio  mes  dia  hora        fecha_inicio\n",
-      "0  2024    1   10     8 2024-01-10 08:30:00\n",
-      "1  2024    2   15    14 2024-02-15 14:45:00\n",
-      "2  2024    3   20     9 2024-03-20 09:20:00\n",
-      "3  2024    4   25    18 2024-04-25 18:10:00\n",
-      "4  2024   10    1     8 2024-10-01 08:00:00\n",
-      "5  2024   10    2     9 2024-10-02 09:00:00\n",
-      "6  2024   10    3    10 2024-10-03 10:00:00\n",
-      "7  2024   10    4    11 2024-10-04 11:00:00\n"
+      "   anio  mes  dia  hora  minuto        fecha_inicio\n",
+      "0  2024    1   10     8      30 2024-01-10 08:30:00\n",
+      "1  2024    2   15    14      45 2024-02-15 14:45:00\n",
+      "2  2024    3   20     9      20 2024-03-20 09:20:00\n",
+      "3  2024    4   25    18      10 2024-04-25 18:10:00\n",
+      "4  2024   10    1     8       0 2024-10-01 08:00:00\n",
+      "5  2024   10    2     9       0 2024-10-02 09:00:00\n",
+      "6  2024   10    3    10       0 2024-10-03 10:00:00\n",
+      "7  2024   10    4    11       0 2024-10-04 11:00:00\n"
      ]
     }
    ],
@@ -378,6 +388,7 @@
     "    'mes': [fecha.month for fecha in fechas_unicas],\n",
     "    'dia': [fecha.day for fecha in fechas_unicas],\n",
     "    'hora': [fecha.hour for fecha in fechas_unicas],\n",
+    "    'minuto': [fecha.minute for fecha in fechas_unicas],\n",
     "    'fecha_inicio': fechas_unicas\n",
     "})\n",
     "\n",
@@ -385,7 +396,7 @@
     "\n",
     "# Insertar los datos en la tabla Tiempo del datawarehouse\n",
     "#df_tiempo.to_sql('tiempo', engine, if_exists='replace', index=False)\n",
-    "df_tiempo = actualizarTablaDimension(engine, 'tiempo', df_tiempo, pk=['anio', 'mes', 'dia', 'hora'])\n"
+    "df_tiempo = actualizarTablaDimension(engine, 'tiempo', df_tiempo, pk=['anio', 'mes', 'dia', 'hora', 'minuto'])\n"
    ]
   },
   {
@@ -399,37 +410,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Cargar la tabla de hechos en el datawarehouse usando el df_result\n",
-    "#FORMA 1\n",
-    "df_result.to_sql('registro_lavado', engine, if_exists='append', index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "#FORMA 2\n",
+    "#Cargamos la tabla de hechos.\n",
     "datos = actualizarTablaDimension(engine, 'registro_lavado', df_result, pk= 'id_registro')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
