--- a/DataWarehouse/ETL.ipynb
+++ b/DataWarehouse/ETL.ipynb
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Axel\\AppData\\Local\\Temp\\ipykernel_35904\\3307235792.py:30: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\Axel\\AppData\\Local\\Temp\\ipykernel_35904\\3112422923.py:32: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df_result = pd.read_sql(query, conn)\n"
      ]
     },
@@ -280,7 +280,7 @@
        "[500 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,6 +310,8 @@
     "    Ubicacion u ON l.ID_ubicacion = u.ID_ubicacion\n",
     "JOIN \n",
     "    Marca m ON l.id_marca = m.id_marca\n",
+    "WHERE \n",
+    "    clv.Consumo_energia <> 0 AND clv.Consumo_agua <> 0\n",
     "GROUP BY \n",
     "    Anio, Mes, Dia, Hora, Minuto, u.ID_ubicacion,  m.id_marca;\n",
     "\"\"\"\n",
